# crumpling

./: .gitignore  README.md  pyproject.toml
configs/trial32/: swapstat.params.ini  trial32.names.txt
crumpling/: cli.py
crumpling/detection/: __init__.py  avalanches.py  subavalanches.py
crumpling/output/: __init__.py
data/raw/trial32/: N40K-compress-LJ10-T0.001-F0.61-damp4.0_stage1_trial32_dt10-dr400__swaps.txt
data/raw/trial33/: N40K-compress-LJ10-T0.001-F0.61-damp4.0_stage1_trial33_dt100-dr200__swaps-short.txt
docs/: data-layout.md  output-schemas.md  running-analysis.md
legacy/: README.md  lmp_swapstat4_main.py  lmp_swapstat4_main_bettercomments.cpp
notebooks/: catalogs_trial32.ipynb  swaps_short_trial33.ipynb
scripts/: explore_N40K_swaps_short.ipynb
src/crumpling/: __init__.py  __main__.py  catalogs.py  config.py  geometry.py  models.py  parsing.py  pipeline.py
src/crumpling/output/: catalogs.py  structure.py
tests/: test_avalanches.py  test_parsing.py  test_pipeline.py  test_subavalanches.py
tests/fixtures/: config.ini  swaps.tsv
